fixing api requestbody
