# swagger/RequestBody.php
@@ -14,16 +14,22 @@
  * )
  */
 
-// /**
-//  *
-//  * @OA\RequestBody(
-//  *     request="Rdv",
-//  *     description="Rdv object that needs to be added",
-//  *     required=true,
-//  *     @OA\JsonContent(ref="#/components/schemas/Rdv"),
-//  *     @OA\MediaType(
-//  *         mediaType="application/xml",
-//  *         @OA\Schema(ref="#/components/schemas/Rdv")
-//  *     )
-//  * )
-//  */
+/**
+ *
+ * @OA\RequestBody(
+ *     request="RdvDTO",
+ *     description="Rdv object that needs to be added",
+ *     required=true,
+ *     @OA\JsonContent(ref="#/components/schemas/RdvDTO")
+ * )
+ */
+
+/**
+ *
+ * @OA\RequestBody(
+ *     request="PatientDTO",
+ *     description="Patient object that needs to be added",
+ *     required=true,
+ *     @OA\JsonContent(ref="#/components/schemas/PatientDTO")
+ * )
+ */
